# hackason

./: .firebaserc  .gitignore  CLAUDE.md  LICENSE  README.md  sample-alert-reports.md
.serena/: project.yml
.serena/memories/: active-demo-org.md  code_style.md  deployment-workflow.md  phase2_completed.md  phase3_completed.md  project_overview.md  suggested_commands.md  task_completion.md  tech_stack.md  workflow-rules.md
backend/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/agents/: __init__.py  alert_agent.py  base_agent.py  context_agent.py  intake_agent.py  root_agent.py  summary_agent.py
backend/api/: __init__.py  alerts.py  dashboard.py  knowledge.py  patients.py  settings.py  setup.py  users.py
backend/auth/: __init__.py  dependencies.py
backend/cron/: __init__.py
backend/models/: __init__.py  alert.py  organization.py  patient.py  report.py
backend/services/: __init__.py  firestore_service.py  rag_service.py  risk_service.py  slack_service.py  storage_service.py
backend/slack/: __init__.py  verify.py
docs/: DEVELOPMENT.md  agent-design.md  api-design.md  architecture.md  data-model.md  gemini-3-flash-best-practices.md  nextjs-16-best-practices.md  requirements.md  setup-checklist.md  setup-guide.md  slack-bot-design.md  ui-ux-design.md
frontend/: .env.example  Dockerfile  cloudbuild.yaml  package-lock.json  package.json
frontend/app/: dashboard-sections.tsx  error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
scripts/: post_dummy_reports.py  seed_demo_data.py  seed_knowledge_data.py
(+53 files in other folders)
